--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Fraud Detection Dashboard</title>
   </head>
-  <body>
+  <body class="bg-gradient-to-r from-indigo-900 via-purple-900 to-pink-800 text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
